--- a/res/layout/notes_view.xml
+++ b/res/layout/notes_view.xml
@@ -21,6 +21,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/save_button"
         android:text="@string/save_button" />
 
 </LinearLayout>
